<resources>
    <string name="app_name">PlantKeeper</string>
    <string name="new_plant_to_add">Plant name</string>
    <string name="watering_frequency">Watering frequency</string>
    <string name="name_colon">Name:</string>
    <string name="water_every_colon">Water every:</string>
    <string name="last_watering_colon">Last watering:</string>
    <string name="days">days</string>
    <string name="missing_info">Missing info</string>
    <string name="watering_required">Watering required</string>
    <string name="nearest_watering">Nearest watering</string>
    <string name="feeling_good">Feeling good</string>
    <string name="Days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="watering_every_days">Watering every: %1$d days</string>
    <string name="watering_every_weeks">Watering every: %1$d weeks</string>
    <string name="no_plants_added">No plants added, click fab to add the first one!</string>
    <string name="add_new_plant">Add new plant</string>
    <string name="edit_plant">Edit plant</string>
    <string name="are_you_sure_to_delete_this_plant">Are you sure you want to delete this plant?</string>
    <string name="delete"><u>Delete</u></string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="choose_last_watering_date">Choose last watering date</string>
</resources>