<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/delete_confirmation_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_background"
    android:elevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_frame_beige"
        android:elevation="5dp"
        android:paddingStart="24dp"
        android:paddingTop="36dp"
        android:paddingEnd="24dp"
        android:paddingBottom="36dp">

        <TextView
            android:id="@+id/question_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/are_you_sure_to_delete_this_plant"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cancel_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/delete_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_image_view" />

        <TextView
            android:id="@+id/delete_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/delete"
            android:textColor="@color/red"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_text_view"
            app:layout_constraintTop_toBottomOf="@+id/question_image_view" />

        <ImageView
            android:id="@+id/delete_image_view"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="@id/delete_text_view"
            app:layout_constraintEnd_toStartOf="@id/delete_text_view"
            app:layout_constraintTop_toTopOf="@id/delete_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
