<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_light">

    <TextView
        android:id="@+id/app_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/yellowtail_regular"
        android:text="@string/app_name"
        android:textSize="36dp" />

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_frame_beige"
        android:padding="24dp">

        <TextView
            android:id="@+id/name_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/name_colon"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/new_plant_name_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/new_plant_name_edit_text" />

        <EditText
            android:id="@+id/new_plant_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/name_label_text_view"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/plant_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/sample_plant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_label_text_view" />

        <TextView
            android:id="@+id/water_every_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/water_every_colon"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/plant_image_view" />

        <EditText
            android:id="@+id/watering_frequency_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:inputType="number"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/water_every_label_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/water_every_label_text_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/days"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/watering_frequency_edit_text"
            app:layout_constraintStart_toEndOf="@id/watering_frequency_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/save_plant_fab_menu_image_view"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_gravity="end|bottom"
        android:layout_margin="4dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@drawable/fab_background"
        android:elevation="4dp"
        android:padding="@dimen/fab_padding"
        android:src="@drawable/ic_check" />
</FrameLayout>